--- a/package.yaml
+++ b/package.yaml
@@ -47,6 +47,7 @@ dependencies:
 - wai
 - lens
 - conduit-extra
+- cassava
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
