--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,12 @@ language: haskell
 env:
  - GHCVER=7.8.3 # see note about Alex/Happy
 
+before_install:
+# Download and unpack the stack executable
+- mkdir -p ~/.local/bin
+- export PATH=$HOME/.local/bin:$PATH
+- travis_retry curl -L https://www.stackage.org/stack/linux-x86_64 | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
+
+
 install:
  - cabal install
